Correct Image sizes on iPhone

--- a/app/assets/stylesheets/_prefab/skin/general/desktop/images.css.scss
+++ b/app/assets/stylesheets/_prefab/skin/general/desktop/images.css.scss
@@ -1,1 +1,22 @@
 // Images
+
+.creepy.image {
+  &.landscape {
+    &.large {
+      width: 360px;
+      height: 226px;
+    }
+  }
+}
+
+.display:hover {
+  .creepy.landscape.image {
+    &.large {
+      img {
+        width: 360px*1.1;
+        height: 226px*1.1;
+        margin: -5%;
+      }
+    }
+  }
+}
